--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 1</title>
+    <title>HW 1</title>
 </head>
 <body>
     <h1>Web Design</h1>
-    <h2>Hi!</h2>
+    <h2>Hello!</h2>
 </body>
 </html>
